force-app/main/default/objects/Checklist_Items__c/Checklist_Items__c.object-meta.xml
<CustomObject>
    <label>Checklist Items</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Checklist Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>