force-app/main/default/objects/Checklist_Items__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <label>Checklist</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>