force-app/main/default/objects/Checklist_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Checklist__c</columns>
    <columns>IsActive__c</columns>
    <columns>Order__c</columns>
    <columns>Related_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>